added cors and searchitems
